# leanVM

./: Cargo.toml  README.md
.cargo/: config.toml
crates/air/: Cargo.toml
crates/air/src/: keccak_air.rs  lib.rs
crates/air/tests/: keccak_air.rs
crates/air_snark/: Cargo.toml  README.md  architecture.md
crates/air_snark/src/: lib.rs  preprocessing.rs
crates/air_snark/tests/: keccak_whir.rs  preprocessing_roundtrip.rs  public_api.rs  public_prefix.rs
crates/backend/: Cargo.toml
crates/backend/air/src/: lib.rs
crates/backend/air/src/constraint_folder/: normal.rs  packed.rs
crates/backend/fiat-shamir/: Cargo.toml
crates/backend/fiat-shamir/src/: merkle_pruning.rs  traits.rs  transcript.rs  verifier.rs
crates/backend/field/: Cargo.toml
crates/backend/field/src/: field.rs
crates/backend/koala-bear/: Cargo.toml
crates/backend/koala-bear/src/monty_31/: monty_31.rs
crates/backend/koala-bear/src/quintic_extension/: extension.rs  packed_extension.rs
crates/backend/poly/: Cargo.toml
crates/backend/poly/src/: evals.rs
crates/backend/sumcheck/src/: product_computation.rs  sc_computation.rs
crates/backend/system-info/: Cargo.toml  build.rs
crates/backend/utils/: Cargo.toml
crates/backend/zk-alloc/: Cargo.toml
crates/backend/zk-alloc/src/: lib.rs
crates/lean_compiler/: Cargo.toml  snark_lib.py  zkDSL.md
crates/lean_compiler/src/: b_compile_intermediate.rs  c_compile_final.rs  lang.rs
crates/lean_compiler/src/a_simplify_lang/: mod.rs  post_optimization.rs
crates/lean_compiler/src/parser/parsers/: function.rs
crates/lean_compiler/tests/: test_compiler.rs
crates/lean_compiler/tests/test_data/: error_67.py  error_68.py  error_69.py  error_74.py  error_83.py  error_85.py  error_86.py  error_87.py  error_88.py  error_92.py  error_93.py  error_94.py  error_95.py  error_96.py  error_97.py  error_98.py  program_179.py  program_183.py
crates/lean_prover/: Cargo.toml
crates/lean_prover/python-verifier/: primitives.py  test_verify.py  verifier.py
crates/lean_prover/src/: prove_execution.rs  test_zkvm.rs  trace_gen.rs
crates/lean_prover/tests/: check_whir_configs.rs
crates/lean_vm/: Cargo.toml
crates/lean_vm/src/core/: constants.rs
crates/lean_vm/src/diagnostics/: error.rs
crates/lean_vm/src/execution/: runner.rs
crates/lean_vm/src/isa/: encoder.rs  hint.rs  instruction.rs
crates/lean_vm/src/tables/: mod.rs  table_enum.rs
crates/lean_vm/src/tables/blake3/: mod.rs  trace_gen.rs
crates/lean_vm/src/tables/extension_op/: exec.rs
crates/lean_vm/src/tables/poseidon/: mod.rs  trace_gen.rs
crates/rec_aggregation/: Cargo.toml
crates/rec_aggregation/src/: compilation.rs  type_1_aggregation.rs
crates/rec_aggregation/zkdsl_implem/: fiat_shamir.py  hashing.py  main.py  recursion.py  utils.py  whir.py  xmss_aggregate.py
crates/whir/: Cargo.toml
crates/whir/src/: dft.rs  merkle.rs  open.rs  verify.rs
crates/xmss/: xmss_small_memory.tex
crates/xmss/src/: lib.rs  signers_cache.rs  wots.rs  xmss.rs
misc/: minimal_zkVM.tex
