[package]
name = "lean_prover"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
prox-gaps-conjecture = []

[dependencies]
xmss.workspace = true
rand.workspace = true
tracing.workspace = true
sub_protocols.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
backend.workspace = true
serde.workspace = true

[dev-dependencies]
xmss.workspace = true
rec_aggregation.workspace = true
serde_json.workspace = true
