[package]
name = "rec_aggregation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
prox-gaps-conjecture = ["lean_prover/prox-gaps-conjecture"]

[dependencies]
xmss.workspace = true
tracing.workspace = true
include_dir.workspace = true
sub_protocols.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
lean_prover.workspace = true
backend.workspace = true
postcard.workspace = true
lz4_flex.workspace = true
serde.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
